admin panel and some other changes

--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -2,7 +2,7 @@ footer{
     background-color:#212529;
     height:15rem;
     color:white;
-    clear:both;
+    clear:both !important;
 }
 .copyright{
     color:white;
