--- a/src/app/views/class-room/class-room.component.html
+++ b/src/app/views/class-room/class-room.component.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
             </div>
-            <a data-toggle="modal" data-target="#rateModal" class="btn btn-primary text-white" (click)="onModalOpened()">{{this.course_ratting_review && 'Change Ratting and Review' || 'Rate This Course'}}</a>
+            <a data-toggle="modal" data-target="#rateModal" class="btn btn-primary text-white" (click)="onModalOpened()">{{course_ratting_review && 'Change Ratting and Review' || 'Rate This Course'}}</a>
 
         </div>
     </div>
