--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,22 +1,6 @@
 <footer>
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-3 footer-strong">
-          <strong>CATEGORY</strong>
-      </div>
-      <div class="col-md-3 footer-strong">
-          <strong>CATEGORY</strong>
-      </div>
-      <div class="col-md-3 footer-strong">
-          <strong>CATEGORY</strong>
-      </div>
-      <div class="col-md-3 footer-strong">
-          <strong>CATEGORY</strong>
-      </div>
-    </div>
-  </div>
-  <div class="container footer-bottom-text">
-    <p class="text-center copyright">
+    <p class="text-center">
         copyright &copy; 2018 ELEARN
     </p>
   </div>
