--- a/src/app/views/user-profile/profile/profile.component.html
+++ b/src/app/views/user-profile/profile/profile.component.html
@@ -2,6 +2,12 @@
   <div class="card-header">
     <h5 class="text-center">User Profile</h5>
   </div>
+  <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="updated">
+    <strong>You have successfully updated the profile picture</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close" #alertCloseBtn>
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
   <div class="card-body">
     <form action="" #userProfileForm=ngForm (ngSubmit)="onSubmit()">
       <div class="form-group">
