--- a/src/app/views/user-profile/profilepicture/profilepicture.component.html
+++ b/src/app/views/user-profile/profilepicture/profilepicture.component.html
@@ -2,11 +2,17 @@
   <div class="card-header">
     <h5 class="text-center">Profile Picture</h5>
   </div>
+  <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="updated">
+    <strong>You have successfully updated the profile picture</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
   <div class="card-body">
     <form action="" #userProfileForm=ngForm (ngSubmit)="onSubmit()">
         <div class="card col-lg-4 mx-auto">
           <div class="card-body">
-            <img src="{{user.profile_pic}}" alt="" class="rounded-circle img-fluid">
+            <img src="{{user.profile_pic}}" alt="" class="img-fluid" style="width:11rem" height="11rem">
           </div>
         </div>
       <div class="form-group">
